# fileio

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: Dirs.rs  Files.rs  Paths.rs  dirs.rs  files.rs  main.rs
