[package]
name = "fileio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1.0", features = ["full"] }
ratatui-image = "8.0.1"
image = "0.25.0"
